# sales-a2a-demo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
mcp-toolbox/: .run_mcp.sh  deploy-mcp.sh  tools.yaml
sales_data_agent_consuming/: run_adk.sh
sales_data_agent_consuming/sales_a2a_agent/: agent.py  tools.py
sales_data_agent_expose/: Dockerfile  deploy.sh  requirements.txt
sales_data_agent_expose/sales_data_agent/: agent.py
sales_data_agent_expose/sales_data_agent/remote_sales_data_agent/: agent.json  agent.py  config.py
static/: chatbot.js  index.html  questions.json  script.js
